cmake_minimum_required(VERSION 4.1)
project(CP2406_Week1)

set(CMAKE_CXX_STANDARD 20)

add_executable(CP2406_Week1
        main2.cpp
        myfunctions.h)

# at line 6, you can choose
# which file to include
# for compilation
# Note: You cannot include
#       2 or more files with
#       main(). You can have only
#       1 main() function

# You need to submit the project
# source code and the video
# recording. Include comments
# such as aim of a function
# or block of code, the input
# arguments and expected output.
