cmake_minimum_required(VERSION 4.1)
project(Lecture_02_2406)

set(CMAKE_CXX_STANDARD 20)

add_executable(Lecture_02_2406 main.cpp
        more_examples.cpp
        ArrayExamples.cpp
        ArrayExamples2.cpp
        StringExamples.cpp
        WriteFileExample.cpp
        ReadFileExample.cpp
        InputExamples.cpp
        ProgramArgs.cpp)
